tests/samples/valid/array_length.pn
fn main() -> i32
{
	var x: [2]i32 = [50, 150];
	var total = 0;
	var i = 0;
	{
		if i == |x|
			goto return;
		total = total + x[i];
		i = i + 1;
		loop;
	}
	return: total
}
