tests/samples/invalid/bool_directly_as_condition.pn
fn main() -> i32
{
	var result: i32 = 0;
	var b: bool = true;
	if b
	{
		result = 1;
	}
	return: result
}
